# parakeet-crypto-rs

./: .gitignore  CHANGELOG.MD  Cargo.toml  LICENSE  LICENSE-Apache  LICENSE-MIT  README.md
.github/workflows/: build_rel.yml  test.yml
sample/: README.MD
scripts/: generate_xmly_test_keys.py
scripts/010editor/: KugouKGM.bt  NCM.bt
src/: lib.rs
src/crypto/: byte_offset_cipher.rs  mod.rs
src/crypto/kugou/: header.rs  mod.rs  slots.rs
src/crypto/kuwo/: header.rs  mod.rs  v1.rs  v2.rs
src/crypto/tencent/: ekey.rs  map.rs  mod.rs  qmc.rs  qmc1.rs  qmc2.rs  qmc2_map.rs  qmc2_rc4.rs  rc4.rs
src/crypto/ximalaya/: cipher.rs  mod.rs
src/crypto/ximalaya_android/: cipher.rs  (+1 more)
src/filters/: mod.rs  qmc1_static.rs  qmc2_map.rs
src/helper/: decryptor.rs  mod.rs
src/interfaces/: decrypt_error.rs  decryptor.rs  mod.rs
src/kugou/: kgm_crypto.rs  kgm_crypto_factory.rs  kgm_crypto_type2.rs  kgm_crypto_type3.rs  kgm_crypto_type4.rs  kgm_decryptor.rs  kgm_header.rs  kgm_magic.rs  mod.rs  utils.rs
src/qmc1/: key_expansion.rs  key_normalization.rs  mod.rs  qmc1_impl.rs
src/qmc2/: crypto_map.rs  crypto_rc4.rs  key_utils.rs  mod.rs  qmc2_decryptor_rc4.rs  qmc2_impl.rs  tail_parser.rs  utils_rc4.rs
src/tencent/: key_utils.rs  mod.rs  qmc1.rs  qmc1_key_expansion.rs  qmc2.rs  qmc2_decryptor_map.rs  qmc2_decryptor_rc4.rs  qmc2_footer_parser.rs  qmc_legacy_block.rs
src/utils/: decryptor_helper.rs  loop_counter.rs  loop_iterator.rs  loop_peek_iter.rs  md5.rs  mmkv.rs  mod.rs  rc4.rs  rc4_qmc2.rs  validate.rs  xor_helper.rs
src/ximalaya/: mod.rs  xmly.rs  xmly_crypto.rs
(+63 files in other folders)
