[package]
name = "parakeet-crypto"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "parakeet_cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.9"
byteorder = "1.4.3"
base64 = "0.13.1"
tc_tea = "0.1.4"
md-5 = "0.10.5"
hex = "0.4.3"
