[package]
name = "parakeet-crypto"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "parakeet_cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# https://github.com/johnthagen/min-sized-rust
lto = true
strip = true
codegen-units = 1

[profile.release-d]
inherits = "release"
debug = 2
strip = false

[dependencies]
argh = "0.1.12"
base64 = "0.21.7"
bincode = "1.3.3"
byteorder = "1.5.0"
hex = "0.4.3"
lazy_static = "1.4.0"
md-5 = "0.10.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.196"
serde-big-array = "0.5.1"
tc_tea = "0.1.4"
thiserror = "1.0.56"
mmkv-parser = "0.1.2"
